Archive2/4b/1f5cb1922f9929/output
main.cpp: In function 'int main()':
main.cpp:6:14: error: invalid conversion from 'int' to 'int*' [-fpermissive]
     int *p = 1;
              ^
main.cpp:6:10: warning: unused variable 'p' [-Wunused-variable]
     int *p = 1;
          ^
